# SDP-ROS-workspace

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
scripts/: get_data.py  pub_data.py
src/ros_sdp/: __init__.py  sdp_publisher.py  sdp_subscriber.py
